--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,26 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".MainActivity2"
     android:background="@color/black">
+
     <TextView
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Activity1"
-        android:textSize="20dp"
         android:textColor="@color/white"
-        android:textStyle="normal"
-        android:gravity="center"/>
+        android:textSize="20dp"
+        android:textStyle="normal" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="11dp"
-        android:layout_below="@+id/txt"
         android:layout_centerHorizontal="true"
-        android:text="openActivity"
-        android:onClick="openActivity2"/>
+        android:onClick="openActivity2"
+        android:text="openActivity2"
+        android:textColor="@color/blue" />
 
 
 </RelativeLayout>
