--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity3"
+    tools:context=".MainActivityLogin"
     android:background="@drawable/background">
 
     <TextView
@@ -29,8 +29,8 @@
         android:textColor="@color/white"
         android:textColorHint="@color/black"
         android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="18dp"
-        android:inputType="textPassword"
+        android:drawablePadding="18dp"/>
+        <!--android:inputType="textPassword"-->
         />
     <EditText
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
         android:drawableLeft="@drawable/baseline_info_24"
         android:drawablePadding="18dp"
         />
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/loginBtn"
@@ -83,12 +83,21 @@
         android:textStyle="normal"
         android:layout_margin="12dp"
         />
+    <Button
+           android:id="@+id/button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="OpenActivity1"
+           android:onClick="openActivity1"
+           android:layout_below="@id/forgotPassword"
+           />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/socialicons"
         android:layout_alignParentBottom="true"
         android:gravity="center">
+
 
         <ImageView
             android:layout_width="48dp"
@@ -106,6 +115,14 @@
             android:layout_height="48dp"
             android:src="@drawable/facebook"
             android:layout_margin="15dp"/>
+        <!--<Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OpenActivity1"
+            android:onClick="openActivity1"
+            android:layout_below=""
+            />-->
     </LinearLayout>
 
 
