--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,27 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2"
-    android:background="@color/black">
-
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Activity1"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:textStyle="normal" />
+    tools:context=".MainActivity2">
 
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="11dp"
-        android:layout_centerHorizontal="true"
-        android:onClick="openActivity2"
-        android:text="openActivity2"
-        android:textColor="@color/blue" />
-
+       android:text="Activity"
+        android:onClick="openActivity2"/>
 
 </RelativeLayout>
