--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivityLogin"
     android:background="@drawable/background">
+    <ImageView
+        android:id="@+id/unii"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/uni"
+        android:layout_centerHorizontal="true"
+        android:padding="13dp"
+        android:layout_margin="7dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/signin"
+        android:layout_below="@id/unii"
         android:text="Sign in"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:gravity="center"
@@ -28,6 +37,7 @@
         android:hint="Username"
         android:textColor="@color/white"
         android:textColorHint="@color/black"
+        android:textSize="20dp"
         android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="18dp"/>
         <!--android:inputType="textPassword"-->
@@ -43,6 +53,7 @@
         android:padding="15dp"
         android:textColor="@color/white"
         android:textColorHint="@color/black"
+        android:textSize="20dp"
         android:drawableLeft="@drawable/baseline_info_24"
         android:drawablePadding="18dp"
         />
@@ -84,13 +95,14 @@
         android:layout_margin="12dp"
         />
     <Button
+           android:layout_below="@id/socialicons"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OpenActivity1"
            android:onClick="openActivity1"
-           android:layout_below="@id/forgotPassword"
-           />
+
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -99,22 +111,123 @@
         android:gravity="center">
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/google"
+            android:src="@drawable/email"
             android:layout_margin="15dp"/>
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/twitter"
-            android:layout_margin="15dp"
-            />
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/facebook"
-            android:layout_margin="15dp"/>
+
+
         <!--<Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
