--- a/app/src/main/res/drawable/btn_background_2.xml
+++ b/app/src/main/res/drawable/btn_background_2.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <corners android:radius="50dp"/>
-            <solid android:color="#373EBF"/>
+            <solid android:color="#ADD8E6"/>
         </shape>
     </item>
 </selector>
