--- a/app/src/main/res/layout/activity_only_test.xml
+++ b/app/src/main/res/layout/activity_only_test.xml
@@ -35,10 +35,10 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="@+id/imageView"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
-                    app:layout_constraintVertical_bias="0.104"
+                    app:layout_constraintVertical_bias="0.128"
                     app:srcCompat="@drawable/profil" />
 
                 <TextView
@@ -158,7 +158,8 @@
                         android:paddingStart="20dp"
                         android:text="Fingerprint Settings"
                         android:textAlignment="viewStart" />
-                    <androidx.appcompat.widget.AppCompatButton
+                    <Button
+                        android:id="@+id/backToLogin"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         style="@android:style/Widget.Button"
@@ -169,7 +170,8 @@
                         android:text="Back to Main page"
                         android:textColor="#ffffff"
                         android:textStyle="bold"
-                        android:textSize="18sp"/>
+                        android:textSize="18sp"
+                        android:onClick="backToLogin"/>
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
