--- a/app/src/main/res/layout/activity_main_button.xml
+++ b/app/src/main/res/layout/activity_main_button.xml
@@ -4,31 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityButton">
+    tools:context=".MainActivityButton"
+    android:background="@drawable/background">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
     <Button
+        android:layout_gravity="center"
         android:id="@+id/button1"
         android:layout_width="120dp"
         android:layout_height="130dp"
         android:text="Go to profile"
         android:textSize="13dp"
         android:textColor="@color/white"
-        android:background="@drawable/btn_background_2"
+        android:background="@drawable/background"
         android:padding="12dp"
         android:layout_margin="18dp"
+        android:onClick="goToProfile"
         />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/profileButton"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/calendar"/>
     <Button
-        android:id="@+id/button3"
+        android:layout_gravity="center"
         android:layout_below="@id/button1"
+        android:id="@+id/button2"
         android:layout_width="120dp"
         android:layout_height="130dp"
         android:text="Go to Calendar"
@@ -37,23 +37,6 @@
         android:background="@drawable/btn_background_1"
         android:padding="12dp"
         android:layout_margin="18dp"
-        />
-    <TextView
-        android:layout_gravity="center"
-        android:id="@+id/welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="WelcomeToMyApp"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/profileButton"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/calendar"/>
-
-
+        android:onClick="goToCalendar"/>
+    </LinearLayout>
 </RelativeLayout>
