--- a/app/src/main/res/layout/activity_only_test.xml
+++ b/app/src/main/res/layout/activity_only_test.xml
@@ -73,40 +73,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/btn_background_1"
-                        android:drawableStart="@drawable/ic_1"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:text="My Reviews"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        style="@android:style/Widget.Button"
-                        android:textAlignment="viewStart" />
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button2"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="32dp"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        style="@android:style/Widget.Button"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/btn_background_1"
-                        android:drawableStart="@drawable/ic_2"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:text="Account Settings"
-                        android:textAlignment="viewStart" />
+
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/button3"
                         android:layout_width="match_parent"
@@ -122,42 +89,9 @@
                         android:drawableStart="@drawable/ic_3"
                         android:drawablePadding="20dp"
                         android:paddingStart="20dp"
-                        android:text="Persoanl Information"
+                        android:text="Personal Information"
                         android:textAlignment="viewStart" />
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button4"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        style="@android:style/Widget.Button"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/btn_background_1"
-                        android:drawableStart="@drawable/ic_4"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:text="Notification"
-                        android:textAlignment="viewStart" />
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button5"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="32dp"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        style="@android:style/Widget.Button"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/btn_background_1"
-                        android:drawableStart="@drawable/ic_5"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:text="Fingerprint Settings"
-                        android:textAlignment="viewStart" />
+
                     <Button
                         android:id="@+id/backToLogin"
                         android:layout_width="match_parent"
