--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -17,22 +17,21 @@
             android:id="@+id/ll_bg"
             android:background="@drawable/gradient_1"
             android:orientation="vertical">
-            <TextView
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Afati i Qershorit"
-                android:id="@+id/textView"
+                android:id="@+id/button"
                 android:textColor="@color/white"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
-                android:textSize="30sp"/>
-
-
+                android:textSize="30sp"
+                android:onClick="examPeriods"/>
 
 
         </LinearLayout>
-        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
