--- a/app/src/main/res/layout/activity_main_button.xml
+++ b/app/src/main/res/layout/activity_main_button.xml
@@ -44,12 +44,12 @@
             android:id="@+id/button3"
             android:layout_width="120dp"
             android:layout_height="130dp"
-            android:text="Payment of the semester"
+            android:text="Go to ExamPeriods"
             android:textSize="13dp"
             android:textColor="@color/white"
             android:background="@drawable/btn_background_1"
             android:padding="12dp"
             android:layout_margin="18dp"
-            android:onClick="goToPayment"/>
+            android:onClick="goToExamPeriods"/>
     </LinearLayout>
 </RelativeLayout>
