Created listView for the new screen with exam periods

--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -28,7 +28,7 @@
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
                 android:textSize="30sp"
-                android:onClick="examPeriods"/>
+                android:onClick="bllablla"/>
 
 
         </LinearLayout>
