--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -21,14 +21,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Afati i Qershorit"
-                android:id="@+id/button"
+                android:id="@+id/subjects"
                 android:textColor="@color/white"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
                 android:textSize="30sp"
-                android:onClick="bllablla"/>
+                android:onClick="goToSubjects"/>
 
 
         </LinearLayout>
