--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -101,7 +101,7 @@
                         android:layout_marginEnd="32dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
-                        android:text="Back to Main Page"
+                        android:text="Back to Login"
                         android:textColor="#ffffff"
                         android:textStyle="bold"
                         android:textSize="18sp"
