--- a/app/src/main/res/layout/activity_main_button.xml
+++ b/app/src/main/res/layout/activity_main_button.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityButton"
+    tools:context=".Menu"
     android:background="@drawable/background">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
