--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -26,11 +26,13 @@
         android:textStyle="bold"
         android:gravity="center"
         android:layout_margin="20dp"/>
+
+    <!-- Rest of the layout elements -->
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/username"
-        android:layout_below="@id/signin"
         android:background="@drawable/btn_background_2"
         android:layout_margin="13dp"
         android:padding="15dp"
@@ -39,9 +41,9 @@
         android:textColorHint="@color/black"
         android:textSize="20dp"
         android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="18dp"/>
-        <!--android:inputType="textPassword"-->
-        />
+        android:drawablePadding="18dp"
+        android:layout_below="@+id/signin"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,8 +57,10 @@
         android:textSize="20dp"
         android:drawableLeft="@drawable/baseline_info_24"
         android:drawablePadding="18dp"
-        android:background="@drawable/btn_background_2"
-        />
+        android:background="@drawable/btn_background_2"/>
+
+
+    <!-- Rest of the layout elements -->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,8 +72,7 @@
         android:textSize="15dp"
         android:textColor="@color/white"
         android:background="@drawable/btn_background_1"
-        android:onClick="openActivity1"
-        />
-
+        android:onClick="openActivity1"/>
 
 </RelativeLayout>
+
