--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_item"
@@ -28,9 +29,8 @@
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
                 android:textSize="30sp"
-                android:onClick="goToSubjects"/>
-
-
+                android:onClick="goToSubjects"
+                tools:ignore="onClick"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
