--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -18,7 +18,7 @@
             android:id="@+id/ll_bg"
             android:background="@drawable/gradient_1"
             android:orientation="vertical">
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Afati i Qershorit"
