--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -51,5 +51,12 @@
             android:padding="12dp"
             android:layout_margin="18dp"
             android:onClick="goToExamPeriods"/>
+        <Button
+            android:id="@+id/buttonPopup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Popup"
+            android:layout_gravity="center_horizontal"
+            android:padding="10dp" />
     </LinearLayout>
 </RelativeLayout>
