--- a/app/src/main/res/layout/exam_period_list.xml
+++ b/app/src/main/res/layout/exam_period_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListViewMain">
+    tools:context=".ExamPeriodList">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
