--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/rl_item"
     android:padding="10dp">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +19,8 @@
             android:id="@+id/ll_bg"
             android:background="@drawable/gradient_1"
             android:orientation="vertical">
-            <com.google.android.material.button.MaterialButton
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Afati i Qershorit"
@@ -28,9 +30,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
-                android:textSize="30sp"
-                android:onClick="goToSubjects"
-                tools:ignore="onClick"/>
+                android:textSize="30sp" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
