--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Afati i Qershorit"
-                android:id="@+id/subjects"
+                android:id="@+id/periods"
                 android:textColor="@color/white"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
