--- a/app/src/main/res/layout/activity_january_period.xml
+++ b/app/src/main/res/layout/activity_january_period.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JanuaryPeriod">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Janar"/>
+   <ListView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/list"/>
 
 
 </RelativeLayout>
