Added a textView for each exams_period

--- a/app/src/main/res/layout/exams_november.xml
+++ b/app/src/main/res/layout/exams_november.xml
@@ -30,5 +30,13 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newTextView"
+        android:textColor="@color/black"
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
