--- a/app/src/main/res/layout/exams_september.xml
+++ b/app/src/main/res/layout/exams_september.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="5dp"
         android:id="@+id/card_view">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -16,6 +16,7 @@
             android:id="@+id/ll_bg4"
             android:background="@drawable/gradient_1"
             android:orientation="vertical">
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -31,5 +32,14 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newTextView"
+        android:textColor="@color/black"
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+
 
 </RelativeLayout>
