--- a/app/src/main/res/layout/custom_popup.xml
+++ b/app/src/main/res/layout/custom_popup.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/textViewMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is a custom popup with text!"
+        android:text="Suksese ne provim!"
         android:padding="16dp"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:textColor="@android:color/black" />
 
     <Button
