--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -47,7 +47,7 @@
             android:text="Go to ExamPeriods"
             android:textSize="13dp"
             android:textColor="@color/white"
-            android:background="@drawable/btn_background_1"
+            android:background="@drawable/btn_background_2"
             android:padding="12dp"
             android:layout_margin="18dp"
             android:onClick="goToExamPeriods"/>
@@ -55,7 +55,7 @@
             android:id="@+id/buttonPopup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show Popup"
+            android:text="Payment of the semester"
             android:layout_gravity="center_horizontal"
             android:padding="10dp" />
 
