--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Menu"
     android:background="@drawable/background">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listview"/>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -38,6 +42,8 @@
         android:padding="12dp"
         android:layout_margin="18dp"
         android:onClick="goToCalendar"/>
+
+
         <Button
             android:layout_gravity="center"
             android:layout_below="@id/button2"
@@ -58,6 +64,7 @@
             android:text="Payment of the semester"
             android:layout_gravity="center_horizontal"
             android:padding="10dp" />
+
 
     </LinearLayout>
 </RelativeLayout>
