--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -1,55 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
-    android:background="@drawable/screen"
-    android:orientation="vertical"
-    android:padding="20dp">
-
-
-    <TextView
+    tools:context=".ExamPeriodsList">
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/student"
-        android:text="Student!"
-        android:textSize="50dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:gravity="left"></TextView>
+        android:layout_height="match_parent"
+        android:id="@+id/list_view">
+    </ListView>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-android:layout_margin="80dp"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Personal Information"
-            android:id="@+id/personalInformation"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/btn_background_1"
-            android:drawableStart="@drawable/ic_3"
-            android:drawablePadding="20dp"
-            android:paddingStart="20dp"
-            android:text="Personal Information"
-            android:textAlignment="viewStart"
-            />
-
-    <Button
-        android:id="@+id/backToLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:text="Back to Login!"
-        android:textSize="15dp"
-        android:onClick="BackToLogin"
-        android:background="@drawable/btn_background_1"/>
-
-
-
-</LinearLayout>
+</RelativeLayout>
 
