--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -57,6 +57,21 @@
             android:padding="12dp"
             android:layout_margin="18dp"
             android:onClick="goToExamPeriods"/>
+
+        <Button
+            android:layout_gravity="center"
+            android:layout_below="@id/button4"
+            android:id="@+id/button4"
+            android:layout_width="120dp"
+            android:layout_height="130dp"
+            android:text="Go to nearest Mensa"
+            android:textSize="13dp"
+            android:textColor="@color/white"
+            android:background="@drawable/btn_background_2"
+            android:padding="12dp"
+            android:layout_margin="18dp"
+            android:onClick="goToNearestMensa"/>
+
         <Button
             android:id="@+id/buttonPopup"
             android:layout_width="wrap_content"
