--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="gray">#808080</color>
     <color name="light_blue_400">#FF29B6F6</color>
     <color name="light_blue_600">#FF039BE5</color>
+    <color name="lavender">#8692f7</color>
     <color name="gray_400">#FFBDBDBD</color>
+    <color name="black">#000000</color>
     <color name="gray_600">#FF757575</color>
 </resources>
