--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background"
-    tools:context=".WeekViewActivity">
+    tools:context=".activities.WeekViewActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
