--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_item"
@@ -21,9 +20,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Afati i Janarit"
                 android:id="@+id/periods"
-                android:textColor="@color/blue"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
